tests/ui/inference/need_type_info/self-ty-in-path.stderr
error[E0282]: type annotations needed
  --> $DIR/self-ty-in-path.rs:8:9
   |
LL |         Self::func_a();
   |         ^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the associated function `func_a`
   |
help: consider specifying a concrete type for the generic type `U`
   |
LL |         Self::func_a::<SomeConcreteType>();
   |                     ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
